[package]
name = "variadic_monoids"
version = "0.1.0"
authors = ["Richard Lettich <richardl@berkeley.edu>"]
edition = "2018"
description = "Construct variadic functions using monoids"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["variadic", "monoid"]
repository = "https://github.com/richardlett/VariadicMonoids/"
[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuple_list = "0.1.2"
